Add coins, their positions on the map and score

--- a/testGame/testGame.vcxproj.filters
+++ b/testGame/testGame.vcxproj.filters
@@ -18,5 +18,13 @@
     <ClCompile Include="testGame.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="Coin.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Coin.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
