--- a/testGame/testGame.vcxproj
+++ b/testGame/testGame.vcxproj
@@ -143,7 +143,11 @@ sfml-network-d.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Coin.cpp" />
     <ClCompile Include="testGame.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Coin.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
