--- a/testGame/testGame.vcxproj.filters
+++ b/testGame/testGame.vcxproj.filters
@@ -21,9 +21,15 @@
     <ClCompile Include="Coin.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="Audio.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Coin.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="Audio.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
